# zerolyn

./: .gitignore  Cargo.toml  LICENSE  README.md  compliance.html  ecosystem.html  index.html  package-lock.json  package.json  pools.html  send.html  verify.html  wallet-check.html
assets/: app.js  compliance.js  i18n.de.js  i18n.en.js  i18n.es.js  i18n.ru.b.js  i18n.ru.js  i18n.uk.b.js  i18n.uk.js  pools.js  send-lux.css  send-lux.js  send.js  sendzk.js  studio.css  studio.js  styles.css  verify.js  walletconnect.js
assets/zk/: demo.wasm  demo_final.zkey  transfer.wasm  transfer_final.zkey  verification_key.json
circuits/: demo.circom  package-lock.json  transfer.circom
contracts/asp/: Cargo.toml
contracts/asp/src/: lib.rs
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
docs/: ARCHITECTURE.md
scripts/: build_send.js  deploy.sh  patch_docs.js  patch_sendzk.js  proof_to_args.js  setup.sh  vk_to_args.js
web/: index.html
web/js/: app.js
