[package]
name = "shieldpay-asp"
version = "0.1.0"
edition = "2021"
authors = ["ShieldPay (solo)"]
description = "ASP allow-list root contract for ShieldPay compliance gating."
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "shieldpay_asp"

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
