[package]
name = "zerolyn-pool"
version = "0.1.0"
edition = "2021"
authors = ["Zerolyn (solo)"]
description = "Shielded USDC pool for Zerolyn: deposits, nullifiers, and proof-gated private transfers on Soroban."
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "zerolyn_pool"

[dependencies]
soroban-sdk = { version = "22.0.0", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
