[package]
name = "shieldpay-verifier"
version = "0.1.0"
edition = "2021"
authors = ["ShieldPay (solo)"]
description = "Groth16 verifier for ShieldPay shielded transfers, using Stellar BN254 host functions."
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "shieldpay_verifier"

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
