[package]
name = "zerolyn-verifier"
version = "0.2.0"
edition = "2021"
authors = ["Zerolyn (solo)"]
description = "Groth16 verifier for Zerolyn shielded transfers, using Stellar's native BLS12-381 host functions (Protocol 22)."
license = "MIT"

[lib]
crate-type = ["cdylib"]
name = "zerolyn_verifier"

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
